--- a/docs/notesList/data-structure-algorithm/data-structures/树和二叉树.md
+++ b/docs/notesList/data-structure-algorithm/data-structures/树和二叉树.md
@@ -55,11 +55,13 @@
 
 ### 遍历
 
+![](https://raw.githubusercontent.com/lins403/assetsSpace/master/vuepress/img/tree_traverse.png)
+
 遍历Traversal，根结点N，左子树L，右子树R
 
-- 先序/前序遍历（NLR）
-- 中序遍历（LNR）
-- 后序遍历（LRN）
+- 先序/前序遍历（NLR，PreOrder）按照先访问根节点的顺序
+- 中序遍历（LNR，InOrder）按照根节点在中间访问的顺序
+- 后序遍历（LRN，PostOrder）按照根节点在后面访问的顺序
 - 递归算法和非递归算法的转换
   - 从递归执行过程的角度看，三种遍历方法完全相同
   - 非递归算法
